--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,6 +1,5 @@
 @import './variables';
-@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&family=Tinos&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Staatliches&family=Syne+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Syne+Mono&display=swap');
 
 * {
     margin: 0;
